--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ rvm:
 addons:
   apt:
     packages:
-      - google-chrome-stable
+      - google-chrome-beta
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
