--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ services:
   - docker
 
 before_install:
-- docker run -d -p 4444:4444 --name selenium-hub selenium/hub:3.4.0-chromium
-- docker run --name chrome -d --link selenium-hub:hub selenium/node-chrome:3.4.0-chromium
+- docker run -d -p 4444:4444 --name selenium-hub selenium/hub:latest
+- docker run --name chrome -d --link selenium-hub:hub selenium/node-chrome:latest
 
 addons:
   apt:
